--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,28 @@
-.rawmarksInput {
-    display: flex;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+    font-family: "Roboto";
 }
 
-input {
-    width: 50px;
+.rawmarksInput {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
+    width: 90vw;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
+.subject1, 
+.subject2, 
+.subject3, 
+.subject4,
+.subject5, 
+.subject6 {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
 
 .subject1 .inputs, 
@@ -15,10 +34,52 @@ input {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap: 3px;
 }
 
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
 -webkit-appearance: none;
+}
+
+body {
+    display: flex;
+    background-color: rgb(61, 61, 61);
+    height: 90vh;
+    width: 90vw;
+}
+
+input, select, .wam {
+    background-color: rgb(39, 39, 39);
+    color: antiquewhite;
+    border-radius: 4px;
+    padding: 2px;
+    outline-color: rgb(206, 206, 206);
+    outline-width: 1px;
+    border: none;
+    height: 28px;
+}
+
+select, input {
+    border-radius: 4px;
+    padding: 2px;
+    outline-color: rgb(206, 206, 206);
+    outline-width: 1px;
+    border: none;
+    height: 28px;
+    font-size: 15px;
+}
+
+input {
+    width: 60px;
+    padding-left: 7px;
+}
+
+select {
+    height: 30px;
+}
+
+.wam {
+    text-align: center;
 }
