--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ input::-webkit-inner-spin-button {
 
 body {
     display: flex;
+    flex-direction: column;
     background-color: rgb(61, 61, 61);
     height: 90vh;
     width: 90vw;
