--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
+}
+    
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(61, 61, 61);
+    height: 90vh;
+    align-items: center;
 }
 
-.rawmarksInput, .alignedmarks {
+.rawmarksInput {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 90vh;
-    width: 90vw;
     gap: 15px;
     flex-wrap: wrap;
+    margin-bottom: 5vh;
+}
+    
+.rawmarkscontainer {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    height: 99vh;
+    width: fit-content;
+    gap: 50px;
 }
 
 .subject1, 
@@ -31,11 +47,13 @@
 .subject4 .inputs,
 .subject5 .inputs, 
 .subject6 .inputs {
+    width: 160px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 3px;
+    gap: 4px 10px;
 }
+
 
 
 input::-webkit-outer-spin-button,
@@ -43,13 +61,6 @@ input::-webkit-inner-spin-button {
 -webkit-appearance: none;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(61, 61, 61);
-    height: 90vh;
-    width: 90vw;
-}
 
 input, select, .wam, .aligned {
     background-color: rgb(39, 39, 39);
@@ -59,6 +70,7 @@ input, select, .wam, .aligned {
     outline-color: rgb(206, 206, 206);
     outline-width: 1px;
     border: none;
+    width: 160px;
     height: 30px;
 }
 
@@ -72,16 +84,57 @@ select, input {
 }
 
 input {
-    width: 60px;
+    box-sizing: border-box;
+    width: 75px;
     padding-left: 7px;
 }
 
 .wam, .aligned {
     box-sizing: border-box;
     padding: 5px;
-    vertical-align:middle
+    vertical-align: middle;
 }
 
-.aligned {
-
+.tooltip {
+    align-self: end;
+    gap: 20px;
+    display: flex;
+    align-items: flex-end; 
+    height: 80px;
 }
+  
+  .tooltip .tooltiptext {
+    display: none;
+    width: 350px;
+    background-color: rgb(39, 39, 39);
+    color: #fff;
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+    z-index: 1;
+    font-size: 14px;
+
+
+  }
+  
+
+  .tooltip:hover .tooltiptext {
+    display: block;
+  }
+
+.questionmark {
+    width: 25px;
+    height: 25px;
+    background-color: white;
+    border-radius: 100px;
+    justify-self: flex-end;
+}
+
+.supportedsubjects {
+    color: rgba(255, 255, 255, 0.658);
+}
+
+a {
+    color: rgb(183, 183, 183);
+}
+
