--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,34 @@
 }
     
 body {
+    margin: 0;
     display: flex;
     flex-direction: column;
-    background-color: rgb(61, 61, 61);
+    background-color: rgb(54, 54, 54);
     height: 96vh;
     align-items: center;
 }
+
+header {
+    display: flex;
+    justify-content: center;
+    gap: 35px;
+    width: 100vw;
+    background-color: rgb(30, 30, 30);
+    height: 50px;
+    line-height: 50px;
+}
+    
+.header {
+    text-decoration: none;
+    color: rgb(231, 231, 231);
+}
+
+.feedback {
+    justify-content: flex-end;
+}
+
+
 
 .rawmarksInput {
     display: flex;
@@ -131,3 +153,19 @@ a {
     color: rgb(183, 183, 183);
 }
 
+.main {
+    width: 70vw;
+}
+
+p {
+    color: rgb(199, 199, 199);
+    line-height: 1.3;
+}
+
+h1, h3 {
+    color: rgb(218, 218, 218);
+}
+
+.calculationcontent, .otherinfocontent {
+    margin-top: 50px;
+}
