Limit number of counted units to best 10.
- Ensure best 2 units of english are counted first to
 ensure they contribute to calculations
- Cap the number of units to 10
- Handle edge case where 11 units are inputted, and only the best
10 are necessary
- Update howitworks with an accuracy guarantee given
the set of assumptions

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     background-color: rgb(54, 54, 54);
     height: 96vh;
     align-items: center;
+    overflow-x: hidden;
 }
 
 header {
@@ -187,5 +188,13 @@ h1, h3 {
 button {
     font-size: 14px;
     width: fit-content;
+}
+
+.atar {
+    font-size: 20px;
+    line-height: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
 }
 
