Fix bug with calculating atar's below 60
- polynomial governing the atar conversion with an aggregate under 212.5
(i.e. an atar under 60) was overcomplicated and threw NaN errors.
- both total atar, and atar equivalent were affected, and both are now
rectified

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ input, .wam, .aligned, .band, .scaled, .atar, button, .equivalent {
     background-color: rgb(39, 39, 39);
     color: rgb(255, 249, 241);
     border-radius: 4px;
-    /* padding: 2px; */
+    padding: 2px;
     border: none;
     width: 160px;
     height: 30px;
